--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=bil
+
+#spring.datasource.url=${jdbc:mysql://localhost:3306/bilabonnement}
+#spring.datasource.username=${root}
+#spring.datasource.password=${Aesar1974}
+
+
+spring.datasource.url=${URL}
+spring.datasource.username=${username}
+spring.datasource.password=${password}
+
+
+
+#URL=jdbc:mysql://localhost:3306/bilabonnement;username=root;password=Aesar1974
