--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=bil
 
-#spring.datasource.url=${jdbc:mysql://localhost:3306/bilabonnement}
+#spring.datasource.url=${jdbc:mysqlbil1.mysql.database.azure.com}
 #spring.datasource.username=${root}
-#spring.datasource.password=${Aesar1974}
+#spring.datasource.password=${Netsnets1010!}
 
 
 spring.datasource.url=${URL}
@@ -11,4 +11,4 @@ spring.datasource.password=${password}
 
 
 
-#URL=jdbc:mysql://localhost:3306/bilabonnement;username=root;password=Aesar1974
+#URL=jdbc:mysqlbil1.mysql.database.azure.com;username=root;password=Netsnets1010!
