Her er koden hvor log in virker for 1 bruger

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,10 @@
 spring.application.name=bil
 
-#spring.datasource.url=${jdbc:mysqlbil1.mysql.database.azure.com}
-#spring.datasource.username=${root}
-#spring.datasource.password=${Netsnets1010!}
+# Database konfiguration til Azure MySQL
+spring.datasource.url=jdbc:mysql://mysqlbil1.mysql.database.azure.com:3306/bilabonnement
+spring.datasource.username=root
+spring.datasource.password=Netsnets1010!
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-
-spring.datasource.url=${URL}
-spring.datasource.username=${username}
-spring.datasource.password=${password}
-
-
-
-#URL=jdbc:mysqlbil1.mysql.database.azure.com;username=root;password=Netsnets1010!
+# Server port
+server.port=8081
