--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=bil
 
 # Database konfiguration til Azure MySQL
-spring.datasource.url=jdbc:mysql://mysqlbil1.mysql.database.azure.com:3306/bilabonnement
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://lyinmysql.mysql.database.azure.com:3306/bilabonnement?useSSL=true&serverTimezone=UTC
+spring.datasource.username=lyin
 spring.datasource.password=Netsnets1010!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
