færdiggjort user stories med forretningsudvikler
Bil.java:
tilføjet parametre til setters
tilføjet tom konstruktør
ændret status til getStatus så thymeleaf kan læse det og så det følger java standard

BilRepo.java
i metoderne addBil og updateBil har jeg ændret bil.status til bil.getStatus for at det passer med ændringerne i Bil.java

tilføjet BilService med metoderne fra BilRepo så den ikke tager direkte fra BilRepo men bruger Service, ligesom i forretningudvikler, tilstandsrapport osv

tilføjet BilController.java

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Server port
 server.port=8081
 
+
+# זרו
 server.servlet.encoding.charset=UTF-8
 server.servlet.encoding.enabled=true
 server.servlet.encoding.force=true
-a
