--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,17 @@
 spring.application.name=bil
 
-# Database konfiguration til Azure MySQL
-spring.datasource.url=jdbc:mysql://lyinmysql.mysql.database.azure.com:3306/bilabonnement?useSSL=true&serverTimezone=UTC
-spring.datasource.username=lyin
+# Database konfiguration til lokal MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/bilabonnement
+spring.datasource.username=root
 spring.datasource.password=Netsnets1010!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA konfiguration
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
 # Server port
 server.port=8081
-
 
 # זרו
 server.servlet.encoding.charset=UTF-8
