--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,13 @@
             <scope>runtime</scope>
         </dependency>
 
+        <!-- H2 Database for development/testing -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
         <!-- Spring Boot JDBC -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
