tilføjet div tags i forretningsudvikler.html, rettet forretning service og tilføjet jakarta til pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,13 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
 
+        <!-- Jakarta persistence -->
+        <dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
         <!-- MySQL JDBC Driver -->
         <dependency>
             <groupId>com.mysql</groupId>
