--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,7 @@
 spring.application.name=bil
 
-# Database konfiguration til lokal MySQL
-spring.datasource.url=jdbc:mysql://localhost:3306/bilabonnement
-spring.datasource.username=root
-spring.datasource.password=Netsnets1010!
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.Username=${JDBC_DATABASE_USER}
+spring.datasource.Password=${$JDBC_DATABASE_Password}
+spring.datasource.URL=${JDBC_DATABASE_URL}
 
-# JPA konfiguration
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=true
-
-# Server port
-server.port=8081
-
-# זרו
-server.servlet.encoding.charset=UTF-8
-server.servlet.encoding.enabled=true
-server.servlet.encoding.force=true
+#Password=Eksamen123!;URL=nauarbdatabase.mysql.database.azure.com;User=Gruppe1;
