--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=bil
 
-spring.datasource.Username=${JDBC_DATABASE_USER}
-spring.datasource.Password=${JDBC_DATABASE_Password}
-spring.datasource.URL=${JDBC_DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USER}
+spring.datasource.password=${JDBC_DATABASE_Password}
+spring.datasource.url=${JDBC_DATABASE_URL}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 
