--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #Password=Eksamen123!;URL=nauarbdatabase.mysql.database.azure.com;User=Gruppe1;
 #jdbc:mysql://nauarbdatabase.mysql.database.azure.com:3306/bilabonnement
+
+#jjjj
